# sd-webui-traintrain

./: .dockerignore  .env.example  .gitignore  Dockerfile  PLAN_CLI_CONVERSION.md  README.md  cli.py  compose.yml  pyproject.toml
presets/: ADDifT_Action_XL.json
trainer/: __init__.py  lora.py  train.py  trainer.py
